Enhances footer design and refines layout styles
Improves footer aesthetics with new typography, icons, and color scheme for better branding. Adjusts body styling to prevent horizontal overflow. Refines margin and padding settings across various components for consistent spacing. Updates "Best Sellers" section with enhanced styling and font properties. Includes minor layout adjustments for better responsiveness and alignment.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -606,7 +606,8 @@
 
     <div class="seller-main " id="Bestsellers">
         <div class="text-center w-100">
-            <h3 class="seller-heading py-3 mb-0"><b>Best Sellers</b></h3>
+            <h3 class="seller-heading py-3 mb-0"
+                style="color: #8c0d4f; font-family: quicksand, sans-serif; font-weight: 700;"><b>Best Sellers</b></h3>
             <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
         </div>
 
@@ -883,7 +884,7 @@
     <!-- product list -->
     <!-- add cards to rest of the items/ used js for this didn't had to add them one by one  -->
     <!-- done -->
-    <div class="Plist-container pb-5" style="margin-bottom: 3rem;">
+    <div class="Plist-container">
         <ul class="nav nav-pills justify-content-center p-5 pb-3" id="product-nav">
             <li class="pnav-item">
                 <button class="pnav-link active" aria-current="page" href="#"
@@ -1344,98 +1345,112 @@
 
         <!-- top fotter -->
 
-        <footer id="footer" class="footer pt-5 " style="background-color: aliceblue;">
-            <div class="footer-main">
-                <div class="container">
-                    <div class="row gy-4">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="footer-widget footer-about">
-                                <a href="FstoreTemplate.html" class="logo">
-                                    <span class="sitename text-dark fw-bolder">FashionStore</span>
+        <footer id="footer" style="background-color: #f8f4f6; padding-bottom: 1rem;">
+
+            <div class="footer container-fluid ">
+                <div class="row gy-4">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="footer-widget footer-about">
+                            <a href="index.html" class="logo ">
+                                <span class="sitename fw-bolder"
+                                    style="color: #8c0d4f; font-family: quicksand, sans-serif; font-size: 2rem; letter-spacing: 0.5px;">FashionStore</span>
+                            </a>
+                            <p class="pt-3 fw-normal" style="font-size: 1rem; font-family: quicksand;">Lorem ipsum
+                                dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula,
+                                facilisis magna ut, consectetur lorem. Proin eget tortor.</p>
+
+                            <div class="social-links mt-1">
+                                <h5 style="font-family: quicksand; color: rgb(69, 65, 65); font-size: 1.2rem;">
+                                    Connect With Us</h5>
+                                <div class="social-icons ">
+                                    <a href="#" aria-label="Facebook"><i class='bx bxl-facebook-circle bx-sm'></i></a>
+                                    <a href="#" aria-label="Instagram"> <i class='bx bxl-instagram bx-sm'></i></a>
+                                    <a href="#" aria-label="podcast"><i class='bx bx-podcast bx-sm'></i></a>
+                                    <a href="#" aria-label="TikTok"><i class='bx bxl-tiktok bx-sm'></i></a>
+                                    <a href="#" aria-label="Pinterest"><i class='bx bxl-pinterest bx-sm'></i></a>
+                                    <a href="#" aria-label="YouTube"><i class='bx bxl-youtube bx-sm'></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-6 col-sm-6">
+                        <div class="footer-widget ">
+                            <h4 class=" px-4 pb-0 ">Shop </h4>
+                            <ul class="footer-links">
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>New Arrivals</a></li>
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Bestsellers</a></li>
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Women's Clothing</a></li>
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Men's Clothing</a></li>
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Accessories</a></li>
+                                <li><a href="category.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Sale</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-6 col-sm-6">
+                        <div class="footer-widget">
+                            <h4 class=" px-4 pb-0 ">Support</h4>
+                            <ul class="footer-links">
+                                <li><a href="support.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Help Center</a></li>
+                                <li><a href="account.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Order Status</a></li>
+                                <li><a href="shiping-info.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Shipping Info</a></li>
+                                <li><a href="return-policy.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Returns &amp; Exchanges</a></li>
+                                <li><a href="#"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Size Guide</a></li>
+                                <li><a href="contact.html"><i class='bx bx-arrow-back bx-rotate-180'
+                                            style='color:#8c0d4f'></i>Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="footer-widget">
+                            <h4>Contact Information</h4>
+                            <div class="footer-contact">
+                                <div class="contact-item mb-3">
+                                    <i class='bx bx-map bx-sm'style='color:#8c0d4f'></i>
+                                    <span>123 Fashion Street, New York, NY 10001</span>
+                                </div>
+                                <div class="contact-item mb-3">
+                                   <i class='bx bx-phone bx-sm'style='color:#8c0d4f'></i>
+                                    <span>+1 (555) 123-4567</span>
+                                </div>
+                                <div class="contact-item mb-3">
+                                    <i class="bx bx-envelope bx-sm"style='color:#8c0d4f'></i>
+                                    <span>hello@example.com</span>
+                                </div>
+                                <div class="contact-item mb-3">
+                                    <i class='bx bx-time-five bx-sm' style='color:#8c0d4f' ></i>
+                                    <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
+                                </div>
+                            </div>
+
+                            <div class="app-buttons mt-4 gap-2 d-flex">
+                                <a href="#" class="app-btn">
+                                    <i class='bx bxl-apple bx-sm'></i>
+                                    <span>App Store</span>
                                 </a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula,
-                                    facilisis magna ut, consectetur lorem. Proin eget tortor risus.</p>
-
-                                <div class="social-links mt-4">
-                                    <h5>Connect With Us</h5>
-                                    <div class="social-icons">
-                                        <a href="#" aria-label="Facebook"><i
-                                                class='bx bxl-facebook-circle bx-sm'></i></a>
-                                        <a href="#" aria-label="Instagram"> <i class='bx bxl-instagram bx-sm'></i></a>
-                                        <a href="#" aria-label="Twitter"><i class='bi bi-twitter-x bx-sm'></i></a>
-                                        <a href="#" aria-label="TikTok"><i class='bx bxl-tiktok bx-sm'></i></a>
-                                        <a href="#" aria-label="Pinterest"><i class='bx bxl-pinterest bx-sm'></i></a>
-                                        <a href="#" aria-label="YouTube"><i class='bx bxl-youtube bx-sm'></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-2 col-md-6 col-sm-6">
-                            <div class="footer-widget">
-                                <h4>Shop</h4>
-                                <ul class="footer-links">
-                                    <li><a href="category.html">New Arrivals</a></li>
-                                    <li><a href="category.html">Bestsellers</a></li>
-                                    <li><a href="category.html">Women's Clothing</a></li>
-                                    <li><a href="category.html">Men's Clothing</a></li>
-                                    <li><a href="category.html">Accessories</a></li>
-                                    <li><a href="category.html">Sale</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-2 col-md-6 col-sm-6">
-                            <div class="footer-widget">
-                                <h4>Support</h4>
-                                <ul class="footer-links">
-                                    <li><a href="support.html">Help Center</a></li>
-                                    <li><a href="account.html">Order Status</a></li>
-                                    <li><a href="shiping-info.html">Shipping Info</a></li>
-                                    <li><a href="return-policy.html">Returns &amp; Exchanges</a></li>
-                                    <li><a href="#">Size Guide</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="footer-widget">
-                                <h4>Contact Information</h4>
-                                <div class="footer-contact">
-                                    <div class="contact-item">
-                                        <i class="bi bi-geo-alt"></i>
-                                        <span>123 Fashion Street, New York, NY 10001</span>
-                                    </div>
-                                    <div class="contact-item">
-                                        <i class="bi bi-telephone"></i>
-                                        <span>+1 (555) 123-4567</span>
-                                    </div>
-                                    <div class="contact-item">
-                                        <i class="bi bi-envelope"></i>
-                                        <span>hello@example.com</span>
-                                    </div>
-                                    <div class="contact-item">
-                                        <i class="bi bi-clock"></i>
-                                        <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
-                                    </div>
-                                </div>
-
-                                <div class="app-buttons mt-4">
-                                    <a href="#" class="app-btn">
-                                        <i class="bi bi-apple"></i>
-                                        <span>App Store</span>
-                                    </a>
-                                    <a href="#" class="app-btn">
-                                        <i class="bi bi-google-play"></i>
-                                        <span>Google Play</span>
-                                    </a>
-                                </div>
+                                <a href="#" class="app-btn">
+                                 <i class='bx bxl-play-store bx-sm'></i>
+                                    <span>Google Play</span>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <hr>
             <!--bottom footer  -->
             <div class="footer-bottom">
@@ -1447,33 +1462,21 @@
                                     Reserved.</p>
                             </div>
                             <div class="credits mt-1">
-                                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                                Designed by <a href="https://bootstrapmade.com/"style=" color: #8c0d4f;">BootstrapMade</a>
                             </div>
                         </div>
 
                         <div class="col-lg-6 col-md-12">
-                            <div
-                                class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center gap-4">
+                            <div class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center">
                                 <div class="payment-methods">
-                                    <div class="payment-icons">
-                                        <i class="bi bi-credit-card" aria-label="Credit Card"></i>
-                                        <i class="bi bi-paypal" aria-label="PayPal"></i>
-                                        <i class="bi bi-apple" aria-label="Apple Pay"></i>
-                                        <i class="bi bi-google" aria-label="Google Pay"></i>
-                                        <i class="bi bi-shop" aria-label="Shop Pay"></i>
-                                        <i class="bi bi-cash" aria-label="Cash on Delivery"></i>
-                                    </div>
-                                </div>
+                                    <i class='bx bx-credit-card bx-md '></i>
+                                    <i class='bx bxl-paypal bx-md '></i>
+                                    <i class='bx bxl-apple bx-md '></i>
+                                    <i class='bx bx-store bx-md'></i>
 
-                                <div class="legal-links">
-                                    <i class='bx bx-credit-card bx-md text-muted'></i>
-                                    <i class='bx bxl-paypal bx-md text-muted'></i>
-                                    <i class='bx bxl-apple bx-md text-muted'></i>
-                                    <i class='bx bx-store bx-md text-muted'></i>
-
-                                    <a href="tos.html">Terms</a>
-                                    <a href="privacy.html">Privacy</a>
-                                    <a href="tos.html">Cookies</a>
+                                    <a href="#">Terms</a>
+                                    <a href="#">Privacy</a>
+                                    <a href="#">Cookies</a>
                                 </div>
                             </div>
                         </div>
