Adds hover effects and styles for 'View All Products' button

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -1335,15 +1335,17 @@
                 </div>
                 <!-- View All Button -->
                 <div class="text-center mt-5">
-                    <button type="button" class="btn text-white"
+                    <button type="button" class="allProbtn text-white"
                         style="background-color: #8c0d4f; border-radius: 30px; width: 14rem; height: 3rem;">
-                        View All Products <i class='bx bx-right-arrow-alt text-white'></i>
+                        View All Products <i class='bx bx-arrow-back bx-rotate-180' ></i>
+                        
                     </button>
                 </div>
             </div>
         </div>
 
         <!-- top fotter -->
+         <!-- Done -->
 
         <footer id="footer" style="background-color: #f8f4f6; padding-bottom: 1rem;">
 
