Refactor index.html and testing.html for improved styling and structure
- Added custom styles to dropdown buttons for better visibility.
- Enhanced the search bar with rounded corners and shadow effects.
- Updated button styles for "View All Products" and "Add To Cart" for consistency.
- Cleaned up footer layout and ensured proper alignment of contact information.
- Removed redundant CSS styles from testing.html to streamline the code.
- Improved hover effects for product images and buttons for better user experience.

Refactors styling for enhanced UI consistency

Improves dropdown visibility and search bar aesthetics with rounded corners and shadow effects. Updates button styles for "View All Products" and "Add To Cart" to ensure consistency across the UI. Refines footer layout for better alignment of contact information. Removes redundant CSS in testing.html to streamline code. Enhances hover effects for product images and buttons to improve user experience.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -33,6 +33,7 @@
 
 <body>
     <!-- topnavHeading -->
+    <!-- done -->
     <nav class="navbar navbar-light bg-light" style="font-size: 14px;">
         <div class="container-fluid">
             <div class="container">
@@ -70,7 +71,7 @@
                             <!-- Language Dropdown -->
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle fw-normal" type="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                    aria-expanded="false" style="color: #8c0d4f;">
                                     English
                                 </button>
                                 <ul class="dropdown-menu">
@@ -85,7 +86,7 @@
                             <!-- Currency Dropdown -->
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle fw-normal" type="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                    aria-expanded="false" style="color: #8c0d4f;">
                                     USD
                                 </button>
                                 <ul class="dropdown-menu">
@@ -110,17 +111,22 @@
             <div class="row w-100 align-items-center">
                 <!-- Brand -->
                 <div class="col-lg-4 d-flex align-items-center">
-                    <a class="navbar-brand fw-bolder m-0 p-0">
-                        <h1 class="m-0">Fashion <span style="color: #8c0d4f;">Store</span></h1>
+                    <a class="navbar-brand fw-bolder m-0 p-0" style="font-family: quicksand;">
+                        <h1 class="m-0 " style="font-weight: 800; font-size: 1.5rem;">Fashion <span
+                                style="color: #8c0d4f;">Store</span></h1>
                     </a>
                 </div>
 
                 <!-- Search Bar -->
                 <div class="col-lg-4">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-danger" type="submit" style="color: #8c0d4f;">
-                            <i class='bx bx-search bx-md'></i>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                            style="box-shadow: 2px 4px  8px rgb(222, 222, 222);
+                        border-top-right-radius: 0%; border-bottom-right-radius: 0%; border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
+                        <button class="btn " type="submit"
+                            style="color: #000000;background-color: #8c0d4f;right: 2rem;position: relative; border: none;
+                       box-shadow: 2px 6px 8px rgb(222, 222, 222); border-top-right-radius: 8px; border-bottom-right-radius: 8px; border-top-left-radius: 0%; border-bottom-left-radius: 0%;">
+                            <i class='bx bx-search bx-md text-white'></i>
                         </button>
                     </form>
                 </div>
@@ -1337,15 +1343,15 @@
                 <div class="text-center mt-5">
                     <button type="button" class="allProbtn text-white"
                         style="background-color: #8c0d4f; border-radius: 30px; width: 14rem; height: 3rem;">
-                        View All Products <i class='bx bx-arrow-back bx-rotate-180' ></i>
-                        
+                        View All Products <i class=' allproicon bx bx-arrow-back bx-rotate-180'></i>
+
                     </button>
                 </div>
             </div>
         </div>
 
         <!-- top fotter -->
-         <!-- Done -->
+        <!-- Done -->
 
         <footer id="footer" style="background-color: #f8f4f6; padding-bottom: 1rem;">
 
@@ -1408,8 +1414,8 @@
                                             style='color:#8c0d4f'></i>Shipping Info</a></li>
                                 <li><a href="return-policy.html"><i class='bx bx-arrow-back bx-rotate-180'
                                             style='color:#8c0d4f'></i>Returns &amp; Exchanges</a></li>
-                                <li><a href="#"><i class='bx bx-arrow-back bx-rotate-180'
-                                            style='color:#8c0d4f'></i>Size Guide</a></li>
+                                <li><a href="#"><i class='bx bx-arrow-back bx-rotate-180' style='color:#8c0d4f'></i>Size
+                                        Guide</a></li>
                                 <li><a href="contact.html"><i class='bx bx-arrow-back bx-rotate-180'
                                             style='color:#8c0d4f'></i>Contact Us</a></li>
                             </ul>
@@ -1421,19 +1427,19 @@
                             <h4>Contact Information</h4>
                             <div class="footer-contact">
                                 <div class="contact-item mb-3">
-                                    <i class='bx bx-map bx-sm'style='color:#8c0d4f'></i>
+                                    <i class='bx bx-map bx-sm' style='color:#8c0d4f'></i>
                                     <span>123 Fashion Street, New York, NY 10001</span>
                                 </div>
                                 <div class="contact-item mb-3">
-                                   <i class='bx bx-phone bx-sm'style='color:#8c0d4f'></i>
+                                    <i class='bx bx-phone bx-sm' style='color:#8c0d4f'></i>
                                     <span>+1 (555) 123-4567</span>
                                 </div>
                                 <div class="contact-item mb-3">
-                                    <i class="bx bx-envelope bx-sm"style='color:#8c0d4f'></i>
+                                    <i class="bx bx-envelope bx-sm" style='color:#8c0d4f'></i>
                                     <span>hello@example.com</span>
                                 </div>
                                 <div class="contact-item mb-3">
-                                    <i class='bx bx-time-five bx-sm' style='color:#8c0d4f' ></i>
+                                    <i class='bx bx-time-five bx-sm' style='color:#8c0d4f'></i>
                                     <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
                                 </div>
                             </div>
@@ -1444,7 +1450,7 @@
                                     <span>App Store</span>
                                 </a>
                                 <a href="#" class="app-btn">
-                                 <i class='bx bxl-play-store bx-sm'></i>
+                                    <i class='bx bxl-play-store bx-sm'></i>
                                     <span>Google Play</span>
                                 </a>
                             </div>
@@ -1464,12 +1470,14 @@
                                     Reserved.</p>
                             </div>
                             <div class="credits mt-1">
-                                Designed by <a href="https://bootstrapmade.com/"style=" color: #8c0d4f;">BootstrapMade</a>
+                                Designed by <a href="https://bootstrapmade.com/"
+                                    style=" color: #8c0d4f;">BootstrapMade</a>
                             </div>
                         </div>
 
                         <div class="col-lg-6 col-md-12">
-                            <div class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center">
+                            <div
+                                class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center">
                                 <div class="payment-methods">
                                     <i class='bx bx-credit-card bx-md '></i>
                                     <i class='bx bxl-paypal bx-md '></i>
@@ -1486,6 +1494,10 @@
 
                 </div>
             </div>
+            <!-- scroll-top -->
+
+            <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center active"><i
+                    class="bx bx-up-arrow-alt bx-sm"></i></a>
         </footer>
 
 
