Refactors layout and updates styles for responsiveness
Improves the navbar, promo cards, and carousel for better
alignment and responsiveness across devices. Adjusts font
sizes, spacing, and layout structure. Removes unused code
and optimizes CSS for cleaner design and maintainability.

--- a/FashinstoreClone/contact.html
+++ b/FashinstoreClone/contact.html
@@ -43,24 +43,24 @@
                 <div class="row gy-4 ">
 
                     <div class="col-lg-4 conAdd">
-                        <div class="info-item d-flex ">
-                            <i class='bx bx-map'></i>
+                        <div class="info-item d-flex gap-3">
+                            <i class='bx bx-map bx-sm contact-icons'></i>
                             <div>
                                 <h3>Address</h3>
                                 <p>A108 Adam Street, New York, NY 535022</p>
                             </div>
                         </div><!-- End Info Item -->
 
-                        <div class="info-item d-flex " >
-                            <i class='bx bx-phone-call' ></i>
+                        <div class="info-item d-flex gap-3" >
+                            <i class='bx bx-phone-call bx-sm contact-icons' ></i>
                             <div>
                                 <h3>Call Us</h3>
                                 <p>+1 5589 55488 55</p>
                             </div>
                         </div><!-- End Info Item -->
 
-                        <div class="info-item d-flex ">
-                           <i class='bx bx-envelope'></i>
+                        <div class="info-item d-flex gap-3">
+                           <i class='bx bx-envelope bx-sm contact-icons'></i>
                             <div>
                                 <h3>Email Us</h3>
                                 <p>info@example.com</p>
@@ -95,11 +95,11 @@
                                 </div>
 
                                 <div class="col-md-12 text-center">
-                                    <div class="loading">Loading</div>
+                                    <!-- <div class="loading">Loading</div>
                                     <div class="error-message"></div>
-                                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                                    <div class="sent-message">Your message has been sent. Thank you!</div> -->
 
-                                    <button type="submit">Send Message</button>
+                                    <button type="submit" class="sendBtn">Send Message</button>
                                 </div>
 
                             </div>
