--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -320,7 +320,7 @@
                     <a class="nav-link" href="#">Megamenu2</a>
 
 
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
 
                 </div>
             </div>
