Improves styling and functionality for login and contact pages
Refines CSS for consistent element styling, including enhanced button hover effects and border-radius cross-browser compatibility.

Adds structured login page layout with form elements, hover transitions, and accessibility improvements.

Updates navigation links and fixes minor inconsistencies across contact and index pages.

--- a/FashinstoreClone/contact.html
+++ b/FashinstoreClone/contact.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="header-contact d-flex gap-2 pt-2 px-4">
-            <a href="index.html" style="color: brown;">Home /</a>
+            <a href="index.html" >Home /</a>
             <p>Contact</p>
         </div>
         <p class="px-4" style="font-family: quicksand, sans-serif; font-size: 1.59rem; font-weight: 700; color: brown;">
