--- a/FashinstoreClone/login.html
+++ b/FashinstoreClone/login.html
@@ -20,13 +20,71 @@
     <title>FashioStore Sign-Up</title>
 
 </head>
-
+<!-- 27/6...1.15 -->
 <body>
-    <header>
 
-
-        
+    <header class="loginheader">
+        <div class="header-LogIn d-flex gap-2 pt-2 px-4">
+            <a href="index.html">Home /</a>
+            <p>LogIn</p>
+        </div>
+        <p class=" LogIn px-4 pb-3" style="font-family: quicksand, sans-serif; font-size: 1.59rem; font-weight: 700; color: brown; margin-bottom: 2rem;">
+            LogIn</p>
     </header>
+
+    <div class="login-form ">
+        <div class="container-fluid">
+            <div class="container mb-5">
+                <div class="row justify-content-center">
+                    <div class="col-11 col-sm-8 col-md-6 col-lg-4 p-5 form-body">
+                         <div class="head">                            
+                        <p>LogIn</p>
+                        <span>Welcome back! Please enter your details</span>
+                         </div>
+
+                        <!-- LogIn Form -->
+                        <div class="form-floating mb-4">
+                            <input type="email" class="form-control text-muted" id="floatingInput"
+                                placeholder="name@example.com">
+                            <label for="floatingInput"></label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <sapn class=" gap-4">Password</sapn><a href="#" class="forgot-link ">Forgot password?</a>
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <label for="floatingPassword t"></label>
+                        </div>
+
+                        <!-- check Box -->
+                        <div class="form-check mb-4">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Remember for 30 days
+                            </label>
+                        </div>
+                        <!-- BUTTONS -->
+                        <div class="loginBtn d-grid gap-2">
+                            <button class="signInbtn">Sign In</button>
+                            <button class="SGoogleBtn d-flex justify-content-center">
+                                <i class='bx bxl-google bx-sm '></i>
+                                <span>Sign In with Google</button>
+                        </div>
+
+                        <footer class="d-flex justify-content-center gap-2">
+                            <p class="text-muted ">Don't have an account?</p>
+                            <span style="color: #8c0d4f; font-weight: 600;"> SignUp for Free</span>
+                        </footer>
+
+
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
 
 
 
