--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -169,7 +169,7 @@
                                     </li>
                                     <div class="footer">
                                         <div class="dropdown-footer position-relative" style="left:4 rem;">
-                                            <a href="" class="btn  w-75 mb-2 text-center text-white"
+                                            <a href="login.html" class="btn  w-75 mb-2 text-center text-white"
                                                 style="background-color: #8c0d4f; border-radius: 22px;">Sign In</a>
                                             <a href="" class="btn  w-75"
                                                 style="border: 1px solid #8c0d4f; border-radius: 22px">Register</a>
