Adds registration page and updates styles for form elements

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -171,7 +171,7 @@
                                         <div class="dropdown-footer position-relative" style="left:4 rem;">
                                             <a href="login.html" class="btn  w-75 mb-2 text-center text-white"
                                                 style="background-color: #8c0d4f; border-radius: 22px;">Sign In</a>
-                                            <a href="" class="btn  w-75"
+                                            <a href="register.html" class="btn  w-75"
                                                 style="border: 1px solid #8c0d4f; border-radius: 22px">Register</a>
                                         </div>
                                     </div>
