Enhances login and contact pages with updated UI elements
Improves the login page by adding detailed navigation menus, a redesigned account dropdown, and enhanced footer sections. Updates the contact page header for clarity. Introduces responsive elements and modern styling to improve user experience and accessibility.

--- a/FashinstoreClone/contact.html
+++ b/FashinstoreClone/contact.html
@@ -342,7 +342,7 @@
     </div>
 
 
-    <!-- CONTACT -->
+    <!-- CONTACT FORM-->
     <header>
         <div class="header-contact d-flex gap-2 pt-2 px-4">
             <a href="index.html" >Home /</a>
