Adds form validation for login, registration, and contact forms; updates footer button styling

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -1497,7 +1497,7 @@
             <!-- scroll-top -->
 
             <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center active"><i
-                    class="bx bx-up-arrow-alt bx-sm"></i></a>
+                    class="bx bx-up-arrow-alt bx-sm text-white"></i></a>
         </footer>
 
 
