Fixes link styling and hover effect for registration link
Updates login page to make the "SignUp for Free" link interactive by adding a hyperlink to the registration page.

Enhances hover styling for the registration link with underline and distinct color to improve user experience.

Adds clarification for non-functional color property in CSS.

--- a/FashinstoreClone/login.html
+++ b/FashinstoreClone/login.html
@@ -393,7 +393,7 @@
 
                         <footer class="d-flex justify-content-center gap-2">
                             <p class="text-muted ">Don't have an account?</p>
-                            <span style="color: #8c0d4f; font-weight: 600;"> SignUp for Free</span>
+                            <a href="register.html" style="color: #8c0d4f; font-weight: 600;" id="log-reg"> SignUp for Free</a>
                         </footer>
 
 
